--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.wi9rBexvWykqwwOWqjv8rQHaFL%26pid%3DApi&f=1&ipt=7dba171cae6a18363fc2fa5b1eba67e5ac2c5c0c4ff8061aa4dd80107b11643d&ipo=images"); /* Replace with the actual path to your pattern image */
+  background-image: url("https://smontijo02.github.io/buenprovecho.io/pattern.png"); /* Replace with the actual path to your pattern image */
   background-repeat: repeat; /* Adjust as needed (repeat-x, repeat-y, no-repeat) */
   background-position: center; /* Adjust position (top left, center, etc.) */
   font-family: Arial, sans-serif; /* Basic font styling */
