--- a/style.css
+++ b/style.css
@@ -5,4 +5,5 @@ body {
   font-family: Arial, sans-serif;
   min-height: 100vh;
   color: white;  /* Makes all text white */
+  background: url("https://smontijo02.github.io/buenprovecho.io/pattern.png") rgba(0, 0, 0, 0.5); /* Image with 50% transparent black overlay */
 }
