--- a/style.css
+++ b/style.css
@@ -5,5 +5,5 @@ body {
   font-family: Arial, sans-serif;
   min-height: 100vh;
   color: black;  /* Makes all text black */
-  background-color: url("https://smontijo02.github.io/buenprovecho.io/pattern.png") rgba(255, 255, 255, 0.5); /* Sets background color white with 50% opacity */
+  background-color: rgba(255, 255, 255, 0.5); /* Sets background color white with 50% opacity */
 }
