--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://smontijo02.github.io/buenprovecho.io/pattern.png");
+  background-image: url("https://smontijo02.github.io/buenprovecho.io/pattern.jpeg");
   background-repeat: cover;
   background-position: center;
   font-family: Arial, sans-serif;
